--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <img src="../assets/images/logo.png" />
+            <img src="/les-petits-plats/assets/images/logo.png" />
         </nav>
         <div class="header-container">
             <div class="header-title">
