--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="search-container">
                 <input type="text" placeholder="Rechercher une recette, un ingrédient, ..." class="search-input" id="searchInput" onkeyup="setSearchInput()">
                 <button class="search-button">
-                    <img id="loupe" src="./assets/images/loupe.svg" alt="Rechercher">
+                    <img id="loupe" src="/les-petits-plats/assets/images/loupe.svg" alt="Rechercher">
                 </button>
             </div>
         </div>
